# knncolle_annoy

./: CMakeLists.txt  README.md
.github/workflows/: check-install.yaml
cmake/: Config.cmake.in
docs/: Annoy_8hpp_source.html  Doxyfile  annotated.html  classes.html  classknncolle__annoy_1_1AnnoyBuilder-members.html  classknncolle__annoy_1_1AnnoyBuilder.html  classknncolle__annoy_1_1AnnoyPrebuilt-members.html  classknncolle__annoy_1_1AnnoyPrebuilt.html  classknncolle__annoy_1_1AnnoySearcher-members.html  classknncolle__annoy_1_1AnnoySearcher.html  dir_0e0ab553bc889f86cc4fdbe50dae835c.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  knncolle__annoy_8hpp.html  knncolle__annoy_8hpp_source.html  knncolle_annoy.tag  load__annoy__prebuilt_8hpp.html  load__annoy__prebuilt_8hpp_source.html  md__2github_2workspace_2README.html  namespaceknncolle__annoy.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespaces.html  pages.html  structknncolle__annoy_1_1AnnoyOptions-members.html  structknncolle__annoy_1_1AnnoyOptions.html  structknncolle__annoy_1_1AnnoyPrebuiltTypes-members.html  structknncolle__annoy_1_1AnnoyPrebuiltTypes.html  structknncolle__annoy_1_1PrebuiltSaveConfig-members.html  structknncolle__annoy_1_1PrebuiltSaveConfig.html  utils_8hpp.html  utils_8hpp_source.html
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_6.js  classes_7.js  enums_0.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js  (+3 more)
include/knncolle_annoy/: Annoy.hpp  knncolle_annoy.hpp  load_annoy_prebuilt.hpp  utils.hpp
tests/: CMakeLists.txt
tests/src/: Annoy.cpp  TestCore.h  load_annoy_prebuilt.cpp  utils.cpp
